<resources>
    <string name="app_name">MyApps</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Ne E-Mail</string>
    <string name="nav_header_desc">Kopfnavigation</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_wechselgeldR">Wechselgeld Rechner</string>
    <string name="menu_waehrungsR">Währung-Umrechner</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="url" translatable="false">http://data.fixer.io/api/_PHAC__PHS_&amp;format=1</string>
    <!-- <string name="accesskey" translatable="false">latest?access_key=755dccb9711de888643fb6</string>-->
    <string name="accesskey" translatable="false">latest?access_key=755dccb9711de847643fb6fb4636202c</string> <!--korrekter key-->

    <string-array name="waehrungenkurz">
        <item>EUR</item>
        <item>USD</item>
        <item>TRY</item>
        <item>JPY</item>
        <item>BTC</item>
        <item>CHF</item>
    </string-array>

    <string-array name="waehrungen">
        <item>Euro</item> <!-- -->
        <item>US-Dollar</item>
        <item>Türkische Lire</item>
        <item>Yen</item>
        <item>Bitcoin</item>
        <item>Schweizer Franken</item>
    </string-array>



    <string name="standtxt">Wechselkurs Stand:</string>
    <string name="standDatumErsatzwerte">12.01.2021</string>
    <string-array name="ersatzwerteBaseEuro"> <!-- Base 1 Euro-->
        <item>1</item> <!-- Euro-->
        <item>1.22</item> <!--US-Dollar-->
        <item>9.11</item> <!--Türkische Lire-->
        <item>126.67</item> <!--Yen-->
        <item>0.000034</item> <!--Bitcoin-->
        <item>1.08</item> <!--Schweizer Franken-->
    </string-array>

    <string name="preis">Preis in €</string>
    <string name="gebegeld">Gebe in €</string>
    <string name="wechselgeld">Wechselgeld in €</string>
    <string name="wechselgeldNoten">Noten</string>
    <string name="vorhandeneNoten">Vorhandene Noten</string>
    <string name="randomizeButton">Randomize</string>
    <string name="AutomatSwitch">Automat On/Off</string>
    <string name="emptyPlaceholder">--</string>

    <string-array name="Euro">
        <item>50000</item>
        <item>20000</item>
        <item>10000</item>
        <item>5000</item>
        <item>2000</item>
        <item>1000</item>
        <item>500</item>
        <item>200</item>
        <item>100</item>
        <item>50</item>
        <item>20</item>
        <item>10</item>
        <item>5</item>
        <item>2</item>
        <item>1</item>

    </string-array>
</resources>