<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.stolle.myapps.ui.WechselgeldRechner.WechselGFragment"
        android:label="@string/menu_wechselgeldR"
        tools:layout="@layout/fragment_wechselg" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="de.stolle.myapps.ui.WährungsRechner.WaehrungsRFragment"
        android:label="@string/menu_waehrungsR"
        tools:layout="@layout/fragment_waehrungsrechner" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="de.stolle.myapps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>